--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,66 @@
 
 body{
   background-color: blue;
+  transition: background-color 1s ease;
 }
 
 a, sup{
   color: white;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  min-height: 94vh;
+}
+
+.headerfooter{
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: end;
+
+}
+
+.colors{
+  display: flex;
+}
+
+.colors:hover{
+  cursor: pointer;
+}
+
+input{
+  width: 60%;
+  border: none;
+  background-color: transparent;
+  border-bottom: 15px solid white;
+  padding-bottom: 0px;
+  font-size: 150px;
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-family: 'Konnect';
+}
+
+input:focus{
+  outline: none;
+}
+
+
+::placeholder {
+  color: white;
+  opacity: 1; /* Firefox */
+}
+
+.info{
+  justify-self: end;
+}
+
+.colorbox{
+  height: 40px;
+  width: 40px;
 }
