--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 
 body{
   background-color: blue;
-  transition: background-color 1s ease;
 }
 
 a, sup{
@@ -56,7 +55,7 @@ input:focus{
 
 
 ::placeholder {
-  color: white;
+  color: var(--c, white);
   opacity: 1; /* Firefox */
 }
 
