--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,3 +75,26 @@ input:focus{
   width: 40px;
   border-bottom: 10px solid red;
 }
+
+.loader{
+  background-color: blue;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100%;
+  overflow-y: hidden;
+  touch-action: none;
+  z-index: 888;
+  pointer-events: none;
+  display: grid;
+  place-content: center;
+  transition: opacity 0.6s ease;
+  opacity: 1;
+}
+
+.loader.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
