--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,6 @@
   src: url('../public/font/KonnectBlack.otf') format('opentype');
 }
 
-a, sup{
-  color: white;
-}
-
 main {
   display: flex;
   flex-direction: column;
@@ -41,13 +37,13 @@ input{
   width: 60%;
   border: none;
   background-color: transparent;
-  border-bottom: 15px solid white;
+  border-bottom: 15px solid transparent;
   padding-bottom: 0px;
   font-size: 150px;
   height: 120px;
   padding: 13px 0px 0px 0px;
   margin: 0;
-  color: white;
+  color: transparent;
   font-family: 'Konnect';
   text-transform: lowercase;
 }
@@ -58,7 +54,7 @@ input:focus{
 
 
 ::placeholder {
-  color: var(--c, white);
+  color: var(--c, transparent);
   opacity: 1; /* Firefox */
 }
 
@@ -104,4 +100,28 @@ input:focus{
 .loader.hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.wordContainer{
+  height: 60%;
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+}
+
+.text{
+  padding: 0rem 0.8rem;
+  display: grid;
+  grid-row-gap: 40px;
+}
+
+.arrow{
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.5s ease;
+  background-color: rgb(0.3, 0.3, 0.3, 0.3);
+  opacity: 0;
+}
+
+.arrow:hover{
+  opacity: 0.4;
 }
