--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,10 +118,10 @@ input:focus{
   width: 100%;
   height: 100%;
   transition: opacity 0.5s ease;
-  background-color: rgb(0.3, 0.3, 0.3, 0.3);
+  background-color: black;
   opacity: 0;
 }
 
 .arrow:hover{
-  opacity: 0.4;
+  opacity: 0.3;
 }
