--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,7 @@ main {
 }
 
 form{
+  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -116,6 +117,10 @@ input:focus{
   align-items: start;
 }
 
+.text a{
+  font-size: 130px;
+}
+
 .word{
   width: 100%;
   height: 100%;
@@ -123,7 +128,13 @@ input:focus{
   align-content: end;
 }
 
+.word a{
+  font-size: 35px;
+}
 
+.example a{
+  font-size: 25px;
+}
 
 .arrow{
   width: 100%;
@@ -135,4 +146,5 @@ input:focus{
 
 .arrow:hover{
   opacity: 0.3;
+  cursor: w-resize !important;
 }
