--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ main {
   display: grid;
   grid-template-columns: 30% 70%;
   align-items: end;
-
+  z-index: 4;
 }
 
 .colors{
@@ -104,10 +104,10 @@ input:focus{
 }
 
 .wordContainer{
+  width: 75vw;
   height: 80vh;
   display: grid;
   align-items: end;
-  grid-template-columns: 10vw 75vw 10vw;
 }
 
 .text{
@@ -115,10 +115,6 @@ input:focus{
   padding: 0rem 1rem;
   display: grid;
   align-items: start;
-}
-
-.text a{
-  font-size: 130px;
 }
 
 .word{
@@ -129,6 +125,10 @@ input:focus{
 }
 
 .word a{
+  font-size: 130px;
+}
+
+.definition a{
   font-size: 35px;
 }
 
@@ -136,15 +136,14 @@ input:focus{
   font-size: 25px;
 }
 
-.arrow{
+.arrows{
+  position: fixed;
   width: 100%;
   height: 100%;
-  transition: opacity 0.5s ease;
-  background-color: black;
-  opacity: 0;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 .arrow:hover{
-  opacity: 0.3;
   cursor: w-resize !important;
 }
