--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ main {
   align-items: center;
   padding: 1rem 3rem;
   min-height: 94vh;
+  overflow: hidden;
 }
 
 .headerfooter{
@@ -111,15 +112,14 @@ input:focus{
 }
 
 .text{
-  height: 85%;
-  padding: 0rem 1rem;
+  height: 80%;
   display: grid;
-  align-items: start;
+  align-items: end;
 }
 
 .word{
   width: 100%;
-  height: 100%;
+  height: 15vh;
   display: grid;
   align-content: end;
 }
@@ -128,9 +128,20 @@ input:focus{
   font-size: 130px;
 }
 
+.definition{
+  height: 30vh;
+  display: grid;
+  align-content: start;
+}
+
 .definition a{
   font-size: 35px;
 }
+
+.example{
+  height: 20vh;
+}
+
 
 .example a{
   font-size: 25px;
