--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,10 @@
   src: url('../public/font/KonnectBlack.otf') format('opentype');
 }
 
+a{
+  font-size: 18px;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -74,6 +78,7 @@ input:focus{
 
 .infoTextContent{
   transition: display 0.6s ease;
+  grid-column: span 2;
 }
 
 .colorbox{
@@ -136,15 +141,28 @@ input:focus{
 
 .definition a{
   font-size: 35px;
+  opacity: 1;
 }
 
 .example{
   height: 20vh;
 }
 
-
 .example a{
   font-size: 25px;
+}
+
+.animation-trigger {
+  animation: animateDefinition 0.5s;
+}
+
+@keyframes animateDefinition {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
 
 .arrows{
@@ -157,4 +175,91 @@ input:focus{
 
 .arrow:hover{
   cursor: w-resize !important;
+}
+
+@media only screen and (max-width: 1600px) {
+
+  input{
+    width: 70%;
+    border-bottom: 14px solid transparent;
+    font-size: 130px;
+    height: 90px;
+  }
+  
+}
+
+@media only screen and (max-width: 1210px) {
+
+  input{
+    width: 75%;
+    border-bottom: 13px solid transparent;
+    font-size: 100px;
+    height: 70px;
+  }
+  
+}
+
+@media only screen and (max-width: 900px) {
+
+  input{
+    width: 100%;
+    border-bottom: 10px solid transparent;
+    font-size: 80px;
+    height: 55px;
+  }
+
+  .headerfooter{
+    grid-template-columns: 40% 60%;
+  }
+  
+}
+
+@media only screen and (max-width: 585px) {
+
+  a{
+    font-size: 14px;
+  }
+
+  main {
+    padding: 1rem 2rem;
+  }
+
+  input{
+    border-bottom: 8px solid transparent;
+    font-size: 70px;
+    height: 50px;
+  }
+
+}
+
+@media only screen and (max-width: 525px) {
+
+  input{
+    border-bottom: 8px solid transparent;
+    font-size: 55px;
+    height: 40px;
+  }
+
+}
+
+@media only screen and (max-width: 440px) {
+
+  main {
+    padding: 1rem 1rem;
+  }
+
+  input{
+    border-bottom: 8px solid transparent;
+    font-size: 45px;
+    height: 30px;
+  }
+
+}
+
+@media only screen and (max-width: 380px) {
+
+  a{
+    font-size: 12px;
+  }
+
 }
