--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@ form{
 input{
   width: 60%;
   border: none;
-  background-color: white;
+  background-color: transparent;
   border-bottom: 15px solid white;
   padding-bottom: 0px;
   font-size: 150px;
@@ -69,7 +69,7 @@ input:focus{
 
 
 ::placeholder {
-  color: var(--c, transparent);
+  color: var(--c, white);
   opacity: 1; /* Firefox */
 }
 
