--- a/styles/globals.css
+++ b/styles/globals.css
@@ -189,6 +189,7 @@ input:focus{
 
 .wordNotFound{
   text-align: center;
+  margin-bottom: 200px;
 }
 
 @media only screen and (max-width: 1600px) {
