--- a/styles/globals.css
+++ b/styles/globals.css
@@ -287,6 +287,10 @@ input:focus{
     font-size: 20px;
   }
 
+  .wordNotFound{
+    margin-top: -90px;
+  }
+
 }
 
 @media only screen and (max-width: 525px) {
