--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,10 @@ main {
   align-items: center;
   padding: 1rem 3rem;
   min-height: 94vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  overscroll-behavior-y: contain;
 }
 
 .headerfooter{
@@ -125,13 +128,14 @@ input:focus{
 }
 
 .text{
-  height: 80%;
+  min-height: 80%;
   display: grid;
   align-items: start;
+  grid-template-rows: auto auto 1fr;
+
 }
 
 .word{
-  width: 100%;
   height: 10vh;
   display: grid;
   align-content: end;
@@ -144,6 +148,7 @@ input:focus{
 .definition{
   display: grid;
   align-content: start;
+  overflow-y: auto;
 }
 
 .definition a{
@@ -152,6 +157,8 @@ input:focus{
 }
 
 .example{
+  margin-top: 5vh;
+  overflow-y: auto;
 }
 
 .example a{
