--- a/styles/globals.css
+++ b/styles/globals.css
@@ -226,7 +226,7 @@ input[type="text"] {
   }
 
   .text{
-    height: 80%;
+    min-height: 100%;
   }
 
   .wordContainer{
@@ -295,7 +295,7 @@ input[type="text"] {
   }
 
   .text{
-    height: 92%;
+    min-height: 100%;
   }
 
   .word a{
